--- a/index.html
+++ b/index.html
@@ -1,78 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Room Lookup</title>
-    <style>
-        /* Background Styling */
+    <style>  
         body {
-            background: white;
-            color: black;
-            font-family: Arial, sans-serif;
+            background: #255cdc;
+            color: #333;
+            font-family: 'Poppins', sans-serif; /* ใช้ฟอนต์ Poppins ทั่วทั้งหน้า */
             text-align: center;
             margin: 0;
             padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
-
-        /* Main Container */
-        .container {
-            background: #152a33;
-            padding: 30px;
-            border-radius: 15px;
-            width: 400px;
-            margin: 100px auto;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-            color: white;
+        h2 {
+            font-weight: 600;
+            margin-bottom: 15px;
+            font-size: 20px;
         }
-
-        /* Input Box */
-        input[type="text"] {
-            padding: 12px;
-            width: 90%;
-            border: 2px solid #ccc;
-            border-radius: 5px;
-            transition: 0.3s;
-            outline: none;
-            font-size: 16px;
-        }
-        input[type="text"]:focus {
-            border-color: #007bff;
-            box-shadow: 0 0 10px #007bff;
-        }
-
-        /* Submit Button */
         button {
-            margin-top: 15px;
-            padding: 12px 25px;
-            background: #e45726;
+            font-weight: 400;
+        }
+        input {
+            font-weight: 300;
+        }
+
+        .container {
+            background: #ffffff;
+            padding: 20px;
+            border-radius: 10px;
+            width: 90%;
+            max-width: 350px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .logo {
+            width: auto;
+            height: auto;
+        }
+
+        .input-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        input[type="text"] {
+            padding: 8px;
+            background: #f5f5f5;
+            width: 80%;
+            border: 2px solid #f5f5f5;
+            border-radius: 5px;
+            outline: #f5f5f5;
+            font-size: 14px;
+            text-align: center;
+        }
+
+        input[type="text"]:focus {
+            border-color: #0056b3;
+            box-shadow: 0 0 5px rgba(0, 91, 187, 0.5);
+        }
+
+        button {
+            width: 90%;
+            padding: 10px;
+            background: #007bff;
             color: white;
             border: none;
             cursor: pointer;
-            border-radius: 5px;
+            border-radius: 20px;
             transition: 0.3s;
             font-size: 16px;
-        }
-        button:hover {
-            background: #c9461f;
-        }
-
-        /* Loading Indicator */
-        .loading {
-            display: none;
             margin-top: 10px;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+        }
+        
+        button:hover {
+            background: #0056b3;
         }
 
-        .scheduled-cleaning {
-            color: #e45726; /* Change this color to any you prefer */
-            font-weight: bold;
+        /* การจัดตำแหน่ง GIF ให้อยู่ตรงกลาง */
+        .loading {
+            display: none; /* ซ่อน GIF เมื่อยังไม่ได้กด Submit */
+            margin-top: auto;
+            margin-bottom: auto;
+            width: auto; /* ขนาดของ GIF */
+            height: 60px; /* ขนาดของ GIF */
+            margin: 0 auto; /* จัดให้ตรงกลาง */
         }
 
-        /* Modal Styling */
         .modal {
             display: none;
             position: fixed;
@@ -84,22 +104,6 @@
             background-color: rgba(0, 0, 0, 0.5);
             justify-content: center;
             align-items: center;
-            animation: bounceIn 0.5s ease-out; /* Added bounce animation */
-        }
-
-        /* Bounce animation */
-        @keyframes bounceIn {
-            0% {
-                transform: scale(0.5);
-                opacity: 0;
-            }
-            50% {
-                transform: scale(1.2);
-            }
-            100% {
-                transform: scale(1);
-                opacity: 1;
-            }
         }
 
         .modal-content {
@@ -107,21 +111,23 @@
             padding: 20px;
             border-radius: 10px;
             text-align: center;
-            width: 300px;
+            width: 90%;
+            max-width: 300px;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h2>Please Enter Room Number</h2>
-        <input type="text" id="roomNumber" placeholder="Enter room number (e.g., B104)">
+        <img class="logo" src="Navlogo.png" alt="logo">
+        <h2>Air-conditioner Schedule Lookup</h2>
+        <div class="input-container">
+            <input type="text" id="roomNumber" placeholder="e.g., B104, A109">
+        </div>
         <button id="submitBtn" onclick="submitRoom()">Submit</button>
-        <br>
         <img id="loadingGif" class="loading" src="loading.gif" alt="Loading...">
         <p id="result"></p>
     </div>
 
-    <!-- Custom Modal Popup -->
     <div id="myModal" class="modal">
         <div class="modal-content">
             <p id="modalMessage"></p>
@@ -130,6 +136,20 @@
     </div>
 
     <script>
+        // ฟังก์ชันที่แปลงเวลาเป็นเวลาในกรุงเทพฯ ในรูปแบบ DD MM YY
+        function convertToBangkokTime(utcDateString) {
+            let utcDate = new Date(utcDateString);
+            let bangkokOffset = 7 * 60 * 60 * 1000; 
+            let bangkokDate = new Date(utcDate.getTime() + bangkokOffset);
+            
+            let day = String(bangkokDate.getDate()).padStart(2, '0'); // ค่าของวันที่
+            let month = String(bangkokDate.getMonth() + 1).padStart(2, '0'); // ค่าของเดือน (เริ่มนับจาก 0)
+            let year = String(bangkokDate.getFullYear()).slice(-2); // ค่าของปี (สองหลักสุดท้าย)
+
+            return `${day}/${month}/${year}`; // คืนค่าที่เป็นรูปแบบ DD MM YY
+        }
+
+        // ฟังก์ชันที่ถูกเรียกเมื่อกดปุ่ม Submit
         function submitRoom() {
             let roomNumber = document.getElementById('roomNumber').value.trim();
             let pattern = /^[abcABC]\d{3}$/;
@@ -137,30 +157,22 @@
             let submitBtn = document.getElementById('submitBtn');
             let loadingGif = document.getElementById('loadingGif');
 
-            // Convert UTC Date to Bangkok Time
-            function convertToBangkokTime(utcDateString) {
-                let utcDate = new Date(utcDateString);
-                let bangkokOffset = 7 * 60 * 60 * 1000; 
-                let bangkokDate = new Date(utcDate.getTime() + bangkokOffset);
-                return bangkokDate.toISOString().split("T")[0];
-            }
-
             if (pattern.test(roomNumber)) {
                 resultElement.innerText = "Searching...";
                 resultElement.style.color = "blue";
-                loadingGif.style.display = "block"; // Show GIF when searching
+                loadingGif.style.display = "block"; // แสดง GIF เมื่อกด Submit
                 submitBtn.disabled = true;
 
                 fetch("https://script.google.com/macros/s/AKfycbzbrGTHvnJA7C13DyOVWtJvmEZWdzCbPrcVrwylMck--TaSsy3a888xJMvIvMnhQt76aQ/exec?room=" + encodeURIComponent(roomNumber))
                 .then(response => response.json())
                 .then(data => {
-                    loadingGif.style.display = "none"; // Hide GIF when done
+                    loadingGif.style.display = "none"; // ซ่อน GIF เมื่อได้รับผลลัพธ์
                     submitBtn.disabled = false;
 
                     if (data.schedule) {
                         let correctDate = convertToBangkokTime(data.schedule);
-                        resultElement.innerText = "Scheduled Cleaning: " + correctDate;
-                        resultElement.style.color = "sky";
+                        resultElement.innerText = "Cleaning Date: " + correctDate;
+                        resultElement.style.color = "green";
                         showModal("✅ Room: " + roomNumber + "<br>Cleaning Date: " + correctDate);
                     } else if (data.error) {
                         resultElement.innerText = data.error;
@@ -169,42 +181,31 @@
                     }
                 })
                 .catch(error => {
-                    console.log("Error:", error);
-                    resultElement.innerText = "❌ An error occurred while retrieving data.";
+                    console.error("Error:", error);
+                    resultElement.innerText = "❌ An error occurred.";
                     resultElement.style.color = "red";
-                    showModal("❌ An error occurred. Please try again.");
-
-                    loadingGif.style.display = "none"; // Hide GIF if error occurs
+                    showModal("❌ Please try again.");
+                    loadingGif.style.display = "none"; // ซ่อน GIF เมื่อมีข้อผิดพลาด
                     submitBtn.disabled = false;
                 });
-
             } else {
-                resultElement.innerText = "❌ Invalid room format!";
+                resultElement.innerText = "❌ Invalid format!";
                 resultElement.style.color = "red";
                 showModal("❌ Invalid room format!");
             }
         }
 
-        // Close modal when clicking outside the box
-        document.getElementById("myModal").addEventListener("click", function(event) {
-            if (event.target === this) {
-                closeModal();
-            }
-        });
-
+        // ฟังก์ชันแสดง modal
         function showModal(message) {
             document.getElementById("modalMessage").innerHTML = message;
             document.getElementById("myModal").style.display = "flex";
         }
 
+        // ฟังก์ชันปิด modal
         function closeModal() {
             document.getElementById("myModal").style.display = "none";
+            location.reload();
         }
-        function closeModal() {
-        document.getElementById("myModal").style.display = "none";
-        location.reload();  // Refresh the page when "OK" is clicked
-        }
-
     </script>
 </body>
 </html>
