--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </style>
 </head>
 <body>
-    <!-- <div class="container">
+    <div class="container">
         <img class="logo" src="Navlogo.png" alt="logo">
         <h2>Air-conditioner Schedule Lookup</h2>
         <div class="input-container">
@@ -126,7 +126,7 @@
         <button id="submitBtn" onclick="submitRoom()">Submit</button>
         <img id="loadingGif" class="loading" src="loading.gif" alt="Loading...">
         <p id="result"></p>
-    </div> -->
+    </div>
 
     <div id="myModal" class="modal">
         <div class="modal-content">
